edit not found page design

--- a/src/app/Component/not-found/not-found.component.css
+++ b/src/app/Component/not-found/not-found.component.css
@@ -187,10 +187,10 @@ hr:after {
 
 @keyframes moveclouds {
   0% {
-    margin-left: 500px;
+    margin-left: 45%;
   }
 
   100% {
-    margin-left: -500px;
+    margin-left: -45%;
   }
 }
