--- a/src/app/Component/not-found/not-found.component.css
+++ b/src/app/Component/not-found/not-found.component.css
@@ -187,10 +187,10 @@ hr:after {
 
 @keyframes moveclouds {
   0% {
-    margin-left: 45%;
+    margin-left: 520px;
   }
 
   100% {
-    margin-left: -45%;
+    margin-left: -520px;
   }
 }
