add link to the logo in the navbar

--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -2,7 +2,9 @@
   <div class="container-fluid">
     <div class="logo">
       <i style="font-size: 25px;" class="bi bi-bag-heart"></i>
+      <a routerLink="home" style="text-decoration: none; color: rgb(12, 12, 12);">
       <strong style="font-size: 30px;">{{'header.Shoping'|translate}}</strong>
+      </a>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
