--- a/src/app/Component/not-found/not-found.component.html
+++ b/src/app/Component/not-found/not-found.component.html
@@ -12,6 +12,6 @@
     <hr>
     <div class='_1'>THE PAGE</div>
     <div class='_2'>WAS NOT FOUND</div>
-    <a class='btn' href='#'>BACK TO MARS</a>
+    <a class='btn' href='#'>BACK TO Home</a>
   </div>
 </div>
