--- a/src/app/Component/update-profile/update-profile.component.html
+++ b/src/app/Component/update-profile/update-profile.component.html
@@ -1,54 +1,57 @@
 
-<div class="container mt-5 mb-5" *ngIf='!isLoading'>
+<div class="container mt-5 mb-5" >
     <div class="row justify-content-center"> 
         <div class="col-md-9 col-lg-8">
             <div class="card border-success">
                
                 <div class="card-body">
-                    <form  class="w-100">
+                    <form  [formGroup]="userProfile" class="w-100" (ngSubmit)="updateUser()">
                         <div class="row">
                             
                             <div class="col-8 d-flex flex-column align-items-center text-center mb-4 text-center">
                                 <div class="col-6  p-2 mb-4 text-center">
-                                    <img class="col-4 mt-5 w-90 " [src]="url" >
-                                    <input type="file" (change)="setURL($event)">
+                                    <img class="col-4 mt-5 w-90 " [src]="getUserImage(user.image)" >
+                                    <input type="file" class="form-control" formControlName="image" (change)="onImageSelected($event)">
                                 </div>                                
                             </div>
                         <div class="row mt-3 p-5">
                             <div class="col-md-6 p-3">
                                 <label class="form-label">First Name</label>
-                                <input type="text" name="fname" class="form-control" placeholder="First Name" formControlName="fname" >
+                                <input type="text"  class="form-control" [placeholder]="user?.fname"  formControlName="fname" >
                             </div>
                             <div class="col-md-6 p-3">
                                 <label class="form-label">Last Name</label>
-                                <input type="text" name="lname" class="form-control" placeholder="Last Name" formControlName="lname" >
+                                <input type="text"  class="form-control" [placeholder]="user?.lname"  formControlName="lname" >
                             </div>
                             <div class="col-md-6 p-3">
                                 <label class="form-label">Email</label>
-                                <input type="text" name="email" class="form-control" placeholder="Email" formControlName="email" >
+                                <input type="text"  class="form-control" [placeholder]="user?.email"  formControlName="email" >
                             </div>
                             <div formGroupName="address">
 
                                 <div class="col-md-6 p-3">
                                     <label class="form-label">City</label>
-                                    <input type="text" name="city" class="form-control" placeholder="city" formControlName="city" >
+                                    <input type="text" class="form-control" placeholder=" city"  formControlName="city" >
                                 </div>
                                 <div class="col-md-6 p-3">
                                     <label class="form-label">Postal Code</label>
-                                    <input type="text" name="postalCode" class="form-control" placeholder="Postal Code" formControlName="postalCode" >
+                                    <input type="text" class="form-control" placeholder=" postalCode" formControlName="postalCode" >
                                 </div>
                                 <div class="col-md-6 p-3">
                                     <label class="form-label">Street</label>
-                                    <input type="text" class="form-control" name="street" placeholder="Street" formControlName="street" >
+                                    <input type="text" class="form-control" placeholder=" street"  formControlName="street" >
                                 </div>
                             </div>
                             </div>
                         
                         <div class="mt-5 text-center">
-                            <button class="btn btn-success" type="button"  (click)="update()">Update Profile</button>
+                            <button class="btn btn-success" type="submit" >Update Profile</button>
                         </div>
                       </div>
                      </form>
-                     <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
+                     <!-- <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
                         <app-loading-spinner></app-loading-spinner>
-                        </div>
+                        </div> -->
+
+
+                        
