--- a/src/app/Component/update-profile/update-profile.component.html
+++ b/src/app/Component/update-profile/update-profile.component.html
@@ -1,57 +1,86 @@
 
-<div class="container mt-5 mb-5" >
+<div class="container mt-5 mb-5" *ngIf="!isLoading">
     <div class="row justify-content-center"> 
         <div class="col-md-9 col-lg-8">
             <div class="card border-success">
                
-                <div class="card-body">
-                    <form  [formGroup]="userProfile" class="w-100" (ngSubmit)="updateUser()">
+                <div class="card-body p-3">
+                    <form  [formGroup]="userProfile" class="w-100" (ngSubmit)="updateUser()" enctype="multipart/form-data">
                         <div class="row">
                             
-                            <div class="col-8 d-flex flex-column align-items-center text-center mb-4 text-center">
-                                <div class="col-6  p-2 mb-4 text-center">
-                                    <img class="col-4 mt-5 w-90 " [src]="getUserImage(user.image)" >
-                                    <input type="file" class="form-control" formControlName="image" (change)="onImageSelected($event)">
-                                </div>                                
-                            </div>
-                        <div class="row mt-3 p-5">
-                            <div class="col-md-6 p-3">
+                            <div class="row ">
+                                    <div class="col-12 text-center">
+                                        <img class="col-2 mt-5  " [src]="imageURL" >
+                                    </div>
+                                    <div class="col-12  text-center mt-4 ">
+                                        <input class=" col-3 " type="file" class="form-control-file" formControlName="image" (change)="onImageSelected($event)">
+                                    </div>                          
+                            <div class="col-12 p-3">
                                 <label class="form-label">First Name</label>
                                 <input type="text"  class="form-control" [placeholder]="user?.fname"  formControlName="fname" >
+                                <div  *ngIf="fname?.errors?.['required']" class="text-danger">must insert First name</div>
+                                <div *ngIf="fname?.errors?.['pattern']" class="text-danger"> must contain letter only</div>
+                                <div *ngIf="fname?.errors?.['minlength'] || fname?.errors?.['maxlength']" class="text-danger">must length of text between 3 and 10</div>
                             </div>
-                            <div class="col-md-6 p-3">
+                            <div class="col-12 p-3">
                                 <label class="form-label">Last Name</label>
                                 <input type="text"  class="form-control" [placeholder]="user?.lname"  formControlName="lname" >
+                                <div  *ngIf="lname?.errors?.['required']" class="text-danger">must insert last name</div>
+                                <div *ngIf="lname?.errors?.['pattern']" class="text-danger"> must contain letter only</div>
+                                <div *ngIf="lname?.errors?.['minlength']||lname?.errors?.['maxlength']" class="text-danger">must length of text between 3 and 10</div>
                             </div>
-                            <div class="col-md-6 p-3">
+                            <div class="col-12 p-3">
                                 <label class="form-label">Email</label>
                                 <input type="text"  class="form-control" [placeholder]="user?.email"  formControlName="email" >
+                                <div  *ngIf="email?.errors?.['required']" class="text-danger">must insert email</div>
+                                <div *ngIf="email?.errors?.['email']" class="text-danger"> insert valid email</div>
                             </div>
                             <div formGroupName="address">
-
-                                <div class="col-md-6 p-3">
-                                    <label class="form-label">City</label>
-                                    <input type="text" class="form-control" placeholder=" city"  formControlName="city" >
+                                <div class="col-12 p-3">
+                                        <label class="form-label">City</label>
+                                        <input type="text" class="form-control" placeholder="city"  formControlName="city" >
+                                        <div *ngIf="city?.errors?.['pattern']" class="text-danger"> must contain letter only</div>
+                                    <div *ngIf="city?.errors?.['minlength'] || city?.errors?.['maxlength']" class="text-danger">must length of text between 3 and 10</div>
                                 </div>
-                                <div class="col-md-6 p-3">
-                                    <label class="form-label">Postal Code</label>
-                                    <input type="text" class="form-control" placeholder=" postalCode" formControlName="postalCode" >
+                                        <div class="col-12 p-3">
+                                            <label class="form-label">Postal Code</label>
+                                            <input type="text" class="form-control" placeholder=" postalCode" formControlName="postalCode" >
+                                            <div *ngIf="postalCode?.errors?.['pattern']" class="text-danger">must contain letter and number only</div>
+                                    <div *ngIf="postalCode?.errors?.['minlength'] || postalCode?.errors?.['maxlength']" class="text-danger">must length between 3 and 10</div>
+                                        </div>
+                                
+                                    <div class="col-12 p-3">
+                                        <label class="form-label">Street</label>
+                                        <input type="text" class="form-control" placeholder=" street"  formControlName="street" >
+                                        <div *ngIf="street?.errors?.['pattern']" class="text-danger">must contain letter and number only</div>
+                                    <div *ngIf="street?.errors?.['minlength'] || street?.errors?.['maxlength']" class="text-danger">must length of text between 3 and 10</div>
+                                    </div>
+                              
                                 </div>
-                                <div class="col-md-6 p-3">
-                                    <label class="form-label">Street</label>
-                                    <input type="text" class="form-control" placeholder=" street"  formControlName="street" >
-                                </div>
-                            </div>
-                            </div>
-                        
+                        </div>
                         <div class="mt-5 text-center">
-                            <button class="btn btn-success" type="submit" >Update Profile</button>
+                            <button class="btn btn-success" type="submit" [disabled]="canNotUpdate">Update Profile</button>
+                
                         </div>
                       </div>
                      </form>
-                     <!-- <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
-                        <app-loading-spinner></app-loading-spinner>
-                        </div> -->
+             
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+    <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
+        <app-loading-spinner></app-loading-spinner>
+        </div>
+
+
+
 
 
                         
