--- a/src/app/Component/product-details/product-details.component.html
+++ b/src/app/Component/product-details/product-details.component.html
@@ -14,6 +14,9 @@
           <h2 class="title">{{ product.title }}</h2>
           <div class="col-sm-6">
             <p class="Category fw-bold">{{ categoryName }}</p>
+            <div class="rating">
+              <span class="star" *ngFor="let star of getStarsArray(product.rattingsAverage)">&#9733;</span>
+            </div>
           </div>
           <div class="col-sm-6">
             <p class="Price text-primary fw-bold fs-5">Price : {{ product.price |currency:'EGP':'symbol'}}</p>
@@ -78,19 +81,20 @@
 <div class="container p-4">
   <div class="row">
   <hr>
-  <div class="col-md-3">
+  
+  <div class="col-md-5">
     <div class="d-flex align-items-center flex-column">
       <div class="review">
         <h3>Customer reviews</h3>
       </div>
-      <div>
-        <p>Review this product</p> 
+      <div class="review-text">
+        <h4>Review this product</h4> 
         <p>Share your thoughts with other customers</p>
       </div>
       <div>
         <div>
          <!-- Button to trigger the form -->
-        <button (click)="checkAccessToWriteReview(product._id)" class="btn btn-primary">Add Review</button>
+        <button (click)="checkAccessToWriteReview(product._id)" class="btn btn-success">Add Review</button>
 
           <!-- Review form -->
           <form *ngIf="showForm" (ngSubmit)="submitReview()">
@@ -108,11 +112,10 @@
             <div class="mb-3">
               <div class="form-group">
                 <label for="comment">Comment:</label>
-                <textarea id="comment" class="form-control" #dataInput [(ngModel)]="newReview.description" name="description" required></textarea>
-              </div>
+                <textarea id="comment" class="form-control textarea" #dataInput [(ngModel)]="newReview.description" name="description" required></textarea> </div>
             </div>
             <div class="modal-footer">
-              <button type="submit" class="btn btn-primary">Submit Review</button>
+              <button type="submit" class="btn btn-success">Submit Review</button>
             </div>
           </form>
 
@@ -121,7 +124,7 @@
       </div>
     </div>
   </div>
-   <div class="col-md-6">
+   <div class="col-md-7">
   <div *ngFor="let review of reviews" class=" review-item ">
       <div class="d-flex align-items-center justify-content-start">
         <img src="../../../assets/project images/profile.png" style="width: 70px;" class="p-2 rounded-circle">
