--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -37,10 +37,21 @@
           </button>
           <!-- //dropdown for user  -->
             <ul class="dropdown-menu dropdown-content" aria-labelledby="dropdownMenuButton1" *ngIf="isAuthed && user?.role == 'user'">
-              <li><a class="dropdown-item" routerLink="/Profile" (click)="getUser()">{{'header.Your Account'|translate}}</a></li>
-              <li><a class="dropdown-item" routerLink="/update_Profile">update Profile</a></li>
+              <li><a class="dropdown-item" routerLink="/Profile" (click)="getUser()">
+                <i class="bi bi-person"></i>
+                {{'header.Your Account'|translate}}</a></li>
+              <li><a class="dropdown-item" routerLink="/update_Profile">
+                <i class="bi bi-pencil-square"></i> update Profile</a></li>
 
-              <li><a class="dropdown-item" routerLink="/userOrders">{{'header.Your Order'|translate}}</a></li>
+              <li><a class="dropdown-item" routerLink="/userOrders">
+                <i class="bi bi-bag"></i>
+                {{'header.Your Order'|translate}}</a></li>
+
+                <li><a class="dropdown-item" routerLink="/changePassword">
+                  <i class="bi bi-shield-lock-fill"></i>
+                  change password
+                </a></li>
+           
               <li><a class="nav-link" (click)="onLogout()" >{{'header.Logout'|translate}}</a>
               </li>
             </ul>
