--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -52,6 +52,9 @@
                     </button>
                     <button class="btn btn-danger" (click)="OpenDialog(item._id , i)" title="Cancel order">
                       <i class="bi bi-x-circle-fill"></i>
+                    </button>  
+                     <button class="btn btn-success" (click)="OpenDialog(item._id , i)" title="approve order">
+                      <i class="bi bi-check2"></i>
                     </button>
                   </div>
                 </td>
