--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -47,15 +47,15 @@
                 <td class="action-buttons"><button class="btn btn-danger" (click)="OpenDialog(item._id)">cancel</button></td> -->
                 <td>
                   <div class="action-buttons">
-                    <button class="btn btn-info" (click)="getOrder(item._id)" title="More info">
+                    <!-- <button class="btn btn-info" (click)="getOrder(item._id)" title="More info">
                       <i class="bi bi-info-circle-fill"></i>
-                    </button>
+                    </button> -->
                     <button class="btn btn-danger" (click)="OpenDialog(item._id , i)" title="Cancel order">
                       <i class="bi bi-x-circle-fill"></i>
                     </button>  
-                     <button class="btn btn-success" (click)="OpenDialog(item._id , i)" title="approve order">
+                     <!-- <button class="btn btn-success" (click)="OpenDialog(item._id , i)" title="approve order">
                       <i class="bi bi-check2"></i>
-                    </button>
+                    </button> -->
                   </div>
                 </td>
               </tr>
