update admin dashboard

--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
@@ -91,7 +91,7 @@
 
       <div class="card">
         <div>
-          <div class="numbers">{{products?.count}}</div>
+          <div class="numbers">5</div>
           <div class="cardName">Sales</div>
         </div>
 
