--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -64,8 +64,10 @@
         </div>
       </div>
     </div>
-    <div *ngIf="orderInfo.length == 0">
-      <app-loading-spinner></app-loading-spinner>
+    <div *ngIf="orderInfo.length == 0" style=" width:100%; height: 100px;">
+      <!-- <app-loading-spinner></app-loading-spinner> -->
+     
+      <p style="font-size: 2rem; text-align: center; margin-top: 16px; color: rgb(92, 28, 28);" >Sorry there is  No Order </p>
     </div>
   </div>
 </div>
