--- a/src/app/Component/update-profile/update-profile.component.html
+++ b/src/app/Component/update-profile/update-profile.component.html
@@ -34,6 +34,7 @@
                                 <input type="text"  class="form-control" [placeholder]="user?.email"  formControlName="email" >
                                 <div  *ngIf="email?.errors?.['required']" class="text-danger">must insert email</div>
                                 <div *ngIf="email?.errors?.['email']" class="text-danger"> insert valid email</div>
+                                <div *ngIf="emailExists" class="text-danger">this email is already exists</div>
                             </div>
                             <div formGroupName="address">
                                 <div class="col-12 p-3">
